--- a/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp.csproj
+++ b/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp/MedicineDirectoryMobileApp.csproj
@@ -29,7 +29,13 @@
     <EmbeddedResource Update="AssistancePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="EventPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ProductCategoryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="ProductDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ProductListPage.xaml">
